# estimate

./: .dockerignore  .flake8  .gitignore  .isort.cfg  AUTONOMY_COMPLETE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DYNAMIC_SCHEMAS_SUMMARY.md  Dockerfile  LICENSE  Makefile  OPTIMIZATION_GUIDE.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  TODO.md  TODO_DYNAMIC.md  config.toml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  run_job.py  test_dynamic_gepa.py  test_dynamic_implementation.py  test_enhanced_discovery.py  test_full_autonomy.py  test_gepa_simple.py  test_integration_simple.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api-reference.md  dynamic-schemas-architecture.md  file-catalog.md  gepa-system-architecture.md  troubleshooting-guide.md  usage-examples.md
input/: .gitkeep
jobs/: .gitkeep  structural_analysis_job.yml
output/: .gitkeep
src/: __init__.py  cli.py  cli_adaptive.py  cli_advanced.py  cli_gepa.py
src/agents/: __init__.py  orchestrator.py  taxonomy_engine.py
src/core/: __init__.py  adaptive_processor.py  config.py  job_manager.py  processor.py
src/discovery/: __init__.py  dynamic_discovery.py  enhanced_discovery.py  nomenclature_parser.py  pattern_analyzer.py
src/models/: blueprint_schemas.py  dynamic_schemas.py  intelligent_classifier.py  schemas.py
src/optimization/: __init__.py  comprehensive_gepa_system.py  dynamic_gepa_optimizer.py  gepa_classification_enhancer.py  gepa_optimizer.py  intelligent_gepa_system.py  pattern_extraction_gepa.py
src/services/: gemini_cache_manager.py  gemini_client.py  gemini_multimodal.py  page_processor.py
src/utils/: adaptive_questions.py  dspy_hallucination_detector.py  file_manager.py  hallucination_detector.py  language_router.py  logging_config.py
tests/: test_core_processor.py  test_dynamic_schemas.py  test_gepa_system.py  test_intelligent_classifier.py  test_language_router.py
