[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-estimator"
version = "2.0.0"
description = "Modern PDF processing system with Google GenAI integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PDF Estimator Team", email = "team@pdf-estimator.com"}
]
maintainers = [
    {name = "PDF Estimator Team", email = "team@pdf-estimator.com"}
]
keywords = ["pdf", "ai", "document-processing", "gemini", "analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
]
requires-python = ">=3.9"
dependencies = [
    "google-genai>=1.34.0,<2.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tenacity>=9.0.0,<10.0.0",
    "httpx>=0.28.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "typing-extensions>=4.12.0;python_version<'3.10'",
]

# Optional dependencies removed for simplified deployment

[project.scripts]
pdf-estimator = "src.cli:main"

[project.urls]
Homepage = "https://github.com/pdf-estimator/pdf-estimator"
Documentation = "https://pdf-estimator.readthedocs.io"
Repository = "https://github.com/pdf-estimator/pdf-estimator.git"
Issues = "https://github.com/pdf-estimator/pdf-estimator/issues"
Changelog = "https://github.com/pdf-estimator/pdf-estimator/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src" = ["py.typed"]

# Tool configurations removed for simplified deployment
